--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dbus-c++ (0.9.0-12deepin0) unstable; urgency=medium
+
+  * No source change upload against GCC 12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Thu, 19 Sep 2024 22:44:40 +0800
+
 dbus-c++ (0.9.0-12) unstable; urgency=medium
 
   * QA upload.
